<resources>
    <string name="app_name">aula06</string>
    
    <string name="red">RED</string>
    <string name="orange">ORANGE</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="indigo">INDIGO</string>
    <string name="pink">PINK</string>
    <string name="violet">VIOLET</string>
    <string name="row1">Row One</string>
    <string name="row2">Row Two</string>
    <string name="row3">Row Three</string>
    <string name="row4">Row Four</string>
    <string name="WindowsFont">Activate Windows</string>
</resources>