<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/black">

    <Button
        android:id="@+id/red"
        android:layout_height="@dimen/button_height"
        android:layout_width="@dimen/button_width"
        android:text="@string/red"
        android:background="@color/red900"/>

    <Button
        android:id="@+id/orange"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/orange"
        android:background="@color/orange900"
        android:layout_below="@id/red"
        android:layout_toRightOf="@id/red"/>

    <Button
        android:id="@+id/yellow"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/yellow"
        android:background="@color/yellow500"
        android:layout_below="@id/orange"
        android:layout_toRightOf="@id/orange"/>

    <Button
        android:id="@+id/green"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/green"
        android:background="@color/green600"
        android:layout_below="@id/yellow"
        android:layout_toRightOf="@id/yellow"/>

    <Button
        android:id="@+id/blue"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/blue"
        android:background="@color/blue700"
        android:layout_below="@id/green"
        android:layout_toLeftOf="@id/green"/>

    <Button
        android:id="@+id/indigo"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/indigo"
        android:background="@color/indigo400"
        android:layout_below="@id/blue"
        android:layout_toLeftOf="@id/blue"/>

    <Button
        android:id="@+id/pink"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/pink"
        android:background="@color/pink400"
        android:layout_below="@id/indigo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WindowsFont"
        android:textColor="@color/white"
        android:textSize="@dimen/WindowsFont"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>