<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/black">


    <Button
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:background="@color/red900"/>

    <Button
        android:id="@+id/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orange"
        android:background="@color/orange900"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow"
        android:background="@color/yellow500"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:background="@color/blue700"
        android:layout_centerInParent="true"/>
    
    <Button
        android:id="@+id/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:background="@color/green600"
        android:layout_toLeftOf="@id/blue"
        android:layout_alignBaseline="@id/blue"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/indigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indigo"
        android:background="@color/indigo400"
        android:layout_toRightOf="@id/blue"
        android:layout_alignBaseline="@id/blue"
        android:layout_marginStart="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/violet"
        android:background="@color/purpleA100"
        android:layout_alignParentBottom="true"/>


        
</RelativeLayout>